EPMRPP-38589 Fixed delete widget modal name overflow

--- a/app/src/components/main/modal/modalLayout/modalContent/modalContent.scss
+++ b/app/src/components/main/modal/modalLayout/modalContent/modalContent.scss
@@ -3,4 +3,5 @@
   font-size: 14px;
   font-family: $FONT-REGULAR;
   white-space: pre-line;
+  overflow: hidden;
 }
